# tronbyt-firmware-esp32

./: platformio.ini  sdkconfig.legacy.defaults
components/tidbyt_hub75/: CMakeLists.txt
extra_scripts/: reset.py
src/: display.cpp
